Add top-bar navigation

--- a/source/assets/stylesheets/application.scss
+++ b/source/assets/stylesheets/application.scss
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
 @import
+  "colors",
+  "settings";
+
+@import
   "foundation/scss/normalize",
   "foundation/scss/foundation";
