--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -1,20 +1,19 @@
 doctype html
-
-html
+html xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml" lang="fr"
   head
-    meta charset='utf-8'
-    meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'
+    meta charset="utf-8"
+    meta name="viewport" content="width=device-width"
+    meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
 
-    /! Responsive/Mobile Content Controls
-    /! meta name='viewport' content='width=device-width, height=device-height, initial-scale=1.0, user-scalable=0'
-
-    title #{data.project.title} | #{current_page.data.title}
+    title
+      '#{data.project.title} &bull; #{current_page.data.title}
     link rel="shortcut icon" href="#{image_path('favicon.ico')}" type="image/x-icon"
 
     = stylesheet_link_tag 'https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css'
     = stylesheet_link_tag 'application'
 
   body class='#{page_classes}'
+    = partial 'views/global/menu_main'
 
     = yield
 
