--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -14,7 +14,8 @@ html xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml" 
 
   body class='#{page_classes}'
     = partial 'views/global/menu_main'
-
+    = partial 'views/global/masterhead'
     = yield
+    = partial 'views/global/footer'
 
     = javascript_include_tag 'application'
