Add custom google font

--- a/source/assets/stylesheets/_settings.scss
+++ b/source/assets/stylesheets/_settings.scss
@@ -10,7 +10,7 @@
 // We use these to control various global styles
 // $body-bg: #fff;
 // $body-font-color: #222;
-// $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-family: "Old Standard TT", Helvetica, Arial, sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
 
@@ -77,7 +77,7 @@
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-// $header-font-family: $body-font-family;
+$header-font-family: "Trocchi", serif;
 // $header-font-weight: 300;
 // $header-font-style: normal;
 // $header-font-color: #222;
