--- a/source/views/global/_footer.html.slim
+++ b/source/views/global/_footer.html.slim
@@ -1,9 +1,9 @@
 .row
   .medium-8.columns
     p
-      '&copy; 2014 - Tous les contenu sont "piratés" depuis
+      '&copy; Le Louvre-Lens 2014 - Tous les contenu sont "piratés" depuis
       = link_to 'louvrelens.fr', 'http://louvrelens.fr', target: '_blank', :rel => 'nofollow'
-  .medium-4.columns
+  .medium-4.columns.text-right
     p
       'Codé à la main par
       = link_to 'David Leuliette', 'http://davidl.fr', target: '_blank', :rel => 'nofollow'
