- Add main atmosphere - Update colors - Update font - Create page title layout

--- a/source/assets/stylesheets/_colors.scss
+++ b/source/assets/stylesheets/_colors.scss
@@ -1,12 +1,15 @@
+$white: #FFFFFF;
 $black: #262626;
+$black-light: #3D343F;
+
 
 $red: #D0483E;
-
+$green: #48AF75;
 
 
 // We use these as default colors throughout
 $primary-color: $red;
-// $secondary-color: #e7e7e7;
+$secondary-color: $green;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
