--- a/source/horaires.html.slim
+++ b/source/horaires.html.slim
@@ -1,6 +1,24 @@
 ---
 title: "Ouverture, fermeture et noctures du musée"
-page_title: HORAIRES
+page_title: Horaires
+page_subtitle: Préparez votre visite au musée ou au parc
 ---
 
+.row data-equalizer=""
+  .medium-4.columns
+    .panel data-equalizer-watch=""
+      h2 Ouverture
+      p Le musée est ouvert tous les jours sauf le mardi de 10h à 18h (Dernier accès à 17h15).
+      p Accueil des groupes dès 9h (réservation obligatoire pour les groupes).
 
+  .medium-4.columns
+    .panel data-equalizer-watch=""
+      h2 Fermeture
+      p Le musée est fermé le mardi et le 1er mai (Fête du travail).
+
+  .medium-4.columns
+    .panel data-equalizer-watch=""
+      h2 Nocturnes
+      p Ouverture jusque 22h le premier vendredi de chaque mois, de septembre à juin.
+
+= partial 'views/global/categories'
