--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -2,21 +2,9 @@
 title: Accueil
 ---
 
-
-
 .row
   .medium-12.columns
 
-    h1 Le louvre autrement
+    h1.contrasted Un parc, Un musée
 
-    ul.large-block-grid-4.medium-block-grid-2.m-category data-equalizer=""
-      - data.categories.each_with_index do |category|
-        li
-          .panel data-equalizer-watch=""
-            div.text-center
-              i class="fa #{category.icon}"
-            h2.l-title
-              = category.title
-            p.l-description
-              = category.description
-            = link_to 'En savoir plus', category.path, class: 'button small secondary'
+= partial 'views/global/categories'
