--- a/source/views/global/_menu_main.html.slim
+++ b/source/views/global/_menu_main.html.slim
@@ -1,4 +1,4 @@
-div class="sticky" data-options="sticky_on: large"
+div class="sticky" data-options="sticky_on: large'"
   nav class="top-bar" data-topbar=""
     ul class="title-area"
       li class="name"
@@ -74,11 +74,5 @@ div class="sticky" data-options="sticky_on: large"
             li
               a hre="#" Multimédia
         li class="divider"
-        li class="has-dropdown"
-          a href="#" Mon Louvre-Lens
-          ul class="dropdown"
-            li
-              a href="#"
-                'Carte d'adhésion
-            li
-              a href="#" Réseaux sociaux
+        li class="has-form"
+          a class="button" href="http://foundation.zurb.com/docs" Mon Louvre-Lens
