--- a/source/assets/stylesheets/_settings.scss
+++ b/source/assets/stylesheets/_settings.scss
@@ -10,7 +10,7 @@
 // We use these to control various global styles
 // $body-bg: #fff;
 // $body-font-color: #222;
-$body-font-family: "Old Standard TT", Helvetica, Arial, sans-serif;
+$body-font-family: "Trocchi", serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
 
@@ -32,11 +32,11 @@ $body-font-family: "Old Standard TT", Helvetica, Arial, sans-serif;
 // $shiny-edge-active-color: rgba(#000, .2);
 
 // Media Query Ranges
-// $small-range: (0em, 40em);
-// $medium-range: (40.063em, 64em);
-// $large-range: (64.063em, 90em);
-// $xlarge-range: (90.063em, 120em);
-// $xxlarge-range: (120.063em);
+$small-range: (0em, 40em);
+$medium-range: (40.063em, 64em);
+$large-range: (64.063em, 90em);
+$xlarge-range: (90.063em, 120em);
+$xxlarge-range: (120.063em);
 
 // $screen: "only screen";
 
@@ -77,7 +77,7 @@ $body-font-family: "Old Standard TT", Helvetica, Arial, sans-serif;
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-$header-font-family: "Trocchi", serif;
+$header-font-family: "Old Standard TT", Helvetica, Arial, sans-serif;
 // $header-font-weight: 300;
 // $header-font-style: normal;
 // $header-font-color: #222;
@@ -286,14 +286,14 @@ $header-font-family: "Trocchi", serif;
 // $button-margin-bottom: rem-calc(20);
 
 // We use these to control button text styles.
-// $button-font-family: $body-font-family;
+$button-font-family: $header-font-family;
 // $button-font-color: #fff;
 // $button-font-color-alt: #333;
 // $button-font-tny: rem-calc(11);
 // $button-font-sml: rem-calc(13);
 // $button-font-med: rem-calc(16);
 // $button-font-lrg: rem-calc(20);
-// $button-font-weight: normal;
+$button-font-weight: normal;
 // $button-font-align: center;
 
 // We use these to control various hover effects.
@@ -728,7 +728,7 @@ $header-font-family: "Trocchi", serif;
 // We use these to control the background and border styles
 // $panel-bg: scale-color(#fff, $lightness: -5%);
 // $panel-border-style: solid;
-// $panel-border-size: 1px;
+$panel-border-size: 0px;
 
 // We use this % to control how much we darken things on hover
 // $panel-function-factor: -11%;
@@ -1087,8 +1087,8 @@ $header-font-family: "Trocchi", serif;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-// $topbar-bg-color: #333;
-// $topbar-bg: $topbar-bg-color;
+$topbar-bg-color: $black;
+$topbar-bg: $topbar-bg-color;
 
 // Height and margin
 // $topbar-height: 45px;
@@ -1140,7 +1140,7 @@ $header-font-family: "Trocchi", serif;
 // Transitions and breakpoint styles
 // $topbar-transition-speed: 300ms;
 // Using rem-calc for the below breakpoint causes issues with top bar
-// $topbar-breakpoint: #{upper-bound($medium-range)}; // Change to 9999px for always mobile layout
+$topbar-breakpoint: #{upper-bound($large-range)}; // Change to 9999px for always mobile layout
 // $topbar-media-query: "only screen and (min-width: #{upper-bound($medium-range)})";
 
 // Divider Styles
