--- a/source/horaires.html.slim
+++ b/source/horaires.html.slim
@@ -21,4 +21,38 @@ page_subtitle: Préparez votre visite au musée ou au parc
       h2 Nocturnes
       p Ouverture jusque 22h le premier vendredi de chaque mois, de septembre à juin.
 
+.row
+  .medium-10.medium-centered.columns
+    h2 Horaires d'ouverture du parc
+    h3 Horaires d'été et d'hiver
+    p TOUS LES JOURS : du 15 mai au 15 septembre, de 7h à 21h et du 16 septembre au 14 mai de 8h à 19h00
+
+    .row
+      .medium-2.columns.text-center
+        i.fa.fa-5x.fa-info
+      .medium-10.columns
+        p
+          |Les réservations sont <strong>obligatoires pour les groupes et les scolaires</strong>.
+          br
+          |Téléphone réservations groupes et scolaires : +33 (0) 321 186 321.
+        p
+          |Email réservations groupes et scolaires : reservation@louvrelens.fr
+
+        p
+          |L'accès du musée est possible jusque 17h15, les visites se terminant à 18h.
+
+        p En cas de forte affluence, l'accès de la Galerie du Temps, pour des raisons compréhensibles de sécurité, pourra être restreint.
+
+
+    .row
+      .medium-2.columns.text-center
+        i.fa.fa-5x.fa-wheelchair
+      .medium-10.columns
+        p
+          '<strong>Des fauteuils roulants sont à disposition</strong> pour visiter le musée du Louvre-Lens.
+        p
+          'Aucune réservation n'est nécessaire. Les personnes ayant besoin d'un fauteuil roulant, doivent le préciser dès l'entrée du musée (au niveau du passage aux rayons X) ainsi nos hôtes d'accueil mettront à disposition un fauteuil (dans la limite des disponibilités).
+
+        p Concernant l'accès au musée, vous avez la possibilité de déposer la personne handicapée au dépose minute* du musée du Louvre-Lens.
+
 = partial 'views/global/categories'
