--- a/source/views/global/_menu_main.html.slim
+++ b/source/views/global/_menu_main.html.slim
@@ -54,7 +54,7 @@ div class="sticky" data-options="sticky_on: large'"
             li
               a href="#" Actualités des partenariats
             li
-              a href="#" Agenda
+              a href="/agenda" Agenda
         li class="divider"
         li
           a href="#" Oeuvres
