--- a/source/assets/stylesheets/components/_type.scss
+++ b/source/assets/stylesheets/components/_type.scss
@@ -2,6 +2,8 @@
   background-color: $black-light;
   color: $white;
   text-transform: uppercase;
+  letter-spacing: -4px;
+  padding: rem-calc(0 20);
 }
 
 h2 {
