--- a/source/dashboard.html.slim
+++ b/source/dashboard.html.slim
@@ -1,5 +1,5 @@
 ---
 title: "Abonement et carte d'adhésion au Louvre-Lens"
 page_title: Mon Louvre-Lens
-page_subtitle: Gérez vos abonnements
+page_subtitle: Gérer vos abonnements
 ---
