--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -2,9 +2,49 @@
 title: Accueil
 ---
 
+.m-feature-box.l-large
+  .row
+    .medium-6.medium-centered.columns
+      h1.contrasted Un parc, Un musée
+  .row
+    .medium-4.medium-centered.columns
+      = link_to "Découvrir l'espace vert", '/parc.html', class: 'button secondary'
+
 .row
-  .medium-12.columns
+  .medium-10.medium-centered.columns
+    p Le Louvre-Lens est un établissement public culturel. Ce "deuxième Louvre" est situé à Lens, il s'agit d'un établissement autonome, lié au musée du Louvre parisien par une convention scientifique et culturelle.
 
-    h1.contrasted Un parc, Un musée
+    p Le musée est construit sur le site de l'ancienne fosse no 9 des mines de Lens. Le nouveau bâtiment accueille des expositions semi-permanentes représentatives de l'ensemble des collections du musée du Louvre, renouvelées régulièrement. Il accueille également des expositions temporaires de niveau national ou international.
 
+.row
+  .medium-10.medium-centered.columns
+    h2 Actualité du musée
+.row
+  .medium-4.columns
+    .panel
+      br
+  .medium-4.columns
+    .panel
+      br
+  .medium-4.columns
+    .panel
+      br
+    p.text-right
+      =link_to '#' do
+        'Toutes les actus
+        i.fa.fa-caret-right
+.row
+  .medium-10.medium-centered.columns
+    h2 Actualité des expositions
+.row
+  .medium-6.columns
+    .panel
+      br
+  .medium-6.columns
+    .panel
+      br
+    p.text-right
+      =link_to '#' do
+        'Toutes les expos
+        i.fa.fa-caret-right
 = partial 'views/global/categories'
