--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -35,7 +35,7 @@ title: Accueil
         i.fa.fa-caret-right
 .row
   .medium-10.medium-centered.columns
-    h2 Actualité des expositions
+    h2 Expositions en cours
 .row
   .medium-6.columns
     .panel
