--- a/source/parc.html.slim
+++ b/source/parc.html.slim
@@ -14,7 +14,8 @@ page_subtitle: Un composant essentiel de l'identité du musée
 .row
   .medium-6.columns
     = image_tag 'http://www.louvrelens.fr/documents/10181/14329/LNS+081201+hall+d%27accueil+parvis+ouest+ZOOM.jpg/cdc4022c-9b1a-4b4c-bb26-b36baa9da9d0?t=1354888228000&type=jpg?t=1354888228000&type=jpg&imageThumbnail=2';
-    p L'aménagement du Parc a été réalisé grâce au mécénat de Veolia Environnement.
+    p
+      em L'aménagement du Parc a été réalisé grâce au mécénat de Veolia Environnement.
   .medium-6.columns
     p Depuis le parc, ce sont également  les qualités  de l'ensemble du territoire qui sont mises à l'honneur  par les vues qui sont ménagées sur le paysage urbain proche et les horizons lointains.
     p La végétation a également fait l'objet d'une attention particulière par la préservation d'espèces rares du site, la plantation de nombreuses espèces endogènes  comme l'apport d'espèces exogènes, plantées pour créer les conditions d'un univers paysagé  durable qui installe le musée dans une dynamique de long terme.
