--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -15,7 +15,8 @@ html xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml" 
 
   body class='#{page_classes}'
     = partial 'views/global/menu_main'
-    = partial 'views/global/page_title'
+    - if current_page.data['page_title'].present?
+      = partial 'views/global/page_title'
     = yield
     = partial 'views/global/footer'
 
