Add contact page

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -7,8 +7,8 @@ title: Accueil
     .medium-6.medium-centered.columns
       h1.contrasted Un parc, Un musée
   .row
-    .medium-4.medium-centered.columns
-      = link_to "Découvrir l'espace vert", '/parc.html', class: 'button secondary'
+    .medium-4.small-10.small-centered.columns
+      = link_to "Découvrir l'espace vert", '/parc.html', class: 'button secondary expand'
 
 .row
   .medium-10.medium-centered.columns
