--- a/source/parc.html.slim
+++ b/source/parc.html.slim
@@ -26,3 +26,5 @@ page_subtitle: Un composant essentiel de l'identité du musée
     h2 Horaires d'ouverture du parc
     h3 Horaires d'été et d'hiver
     p TOUS LES JOURS : du 15 mai au 15 septembre, de 7h à 21h et du 16 septembre au 14 mai de 8h à 19h00
+
+= partial 'views/global/categories'
