--- a/source/views/global/_footer.html.slim
+++ b/source/views/global/_footer.html.slim
@@ -10,7 +10,8 @@
         li Partenaires
         li Presse
         li Mentions légales
-        li Contact
+        li
+          =link_to 'Contact', '/contact'
     .medium-3.columns
       p
         strong Préparer sa visite
