--- a/source/views/global/_page_title.html.slim
+++ b/source/views/global/_page_title.html.slim
@@ -1,7 +1,8 @@
 .page-header
-  .row#js-top
+  .row
     .medium-12.columns
       p.page-subtitle
         = current_page.data.page_subtitle
       h1.page-title
         = current_page.data.page_title
+  #js-content
