--- a/source/assets/stylesheets/_settings.scss
+++ b/source/assets/stylesheets/_settings.scss
@@ -1091,7 +1091,7 @@ $topbar-bg-color: $black;
 $topbar-bg: $topbar-bg-color;
 
 // Height and margin
-// $topbar-height: 45px;
+$topbar-height: 45px;
 // $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
