--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -6,7 +6,7 @@ html xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml" 
     meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
 
     title
-      '#{data.project.title} &bull; #{current_page.data.title}
+      '#{current_page.data.title} &bull; #{data.project.title}
     link rel="shortcut icon" href="#{image_path('favicon.ico')}" type="image/x-icon"
 
     = stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Old+Standard+TT|Trocchi'
@@ -14,6 +14,8 @@ html xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml" 
     = stylesheet_link_tag 'https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css'
 
   body class='#{page_classes}'
+    #js-top
+    = partial 'views/global/page_nav'
     = partial 'views/global/menu_main'
     - if current_page.data['page_title'].present?
       = partial 'views/global/page_title'
