Update page nav

--- a/source/about.html.slim
+++ b/source/about.html.slim
@@ -11,12 +11,10 @@ DANIEL PERCHERON, Président de la Région Nord-Pas de Calais
 
 Xavier Dectot, Directeur
 Luc Herchin
-
-
-Orange Business Service - IT&L@bs, créateur de solutions et de services
+Orange Business Service - IT&L@bs
 
 Bonjour messieurs,
 
-J'aimerais bien vous dire que je trouve votre site génial et qu'il respecte
+J'aimerais bien vous dire que je trouve votre site génial et qu'il respecte les standards d'accessibilité
 
 http://davidl.fr/webdesign.html
