--- a/source/assets/stylesheets/application.scss
+++ b/source/assets/stylesheets/application.scss
@@ -7,7 +7,8 @@
 @import
   "foundation/scss/normalize",
   "foundation/scss/foundation",
-  "components/type";
+  "components/type",
+  "components/dropcap";
 
 @import
   "modules/categories",
