--- a/source/dashboard.html.slim
+++ b/source/dashboard.html.slim
@@ -3,3 +3,52 @@ title: "Abonement et carte d'adhésion au Louvre-Lens"
 page_title: Mon Louvre-Lens
 page_subtitle: Gérer vos abonnements
 ---
+
+.row
+  .medium-10.medium-centered.columns
+    h2 Un an d'avantages au musée du Louvre-Lens
+
+    p La Carte [L] *vous offre :
+    ul
+      li Un accès gratuit, privilégié et illimité aux espaces d'expositions (Grande galerie, Pavillon de verre et galerie d'expositions temporaires)
+      li La gratuité aux expositions temporaires les 15 premiers jours pour la personne de votre choix (exposition Rubens 22 mai - 23 sept.)
+      li Des tarifs préférentiels pour la Scène et pour l'ensemble des ateliers, ainsi qu'à la cafétéria du Louvre-Lens.
+      li Une information régulière et en avant-première sur toute l'actualité du musée.
+
+.row.m-category.text-center data-equalizer=""
+  .medium-4.columns
+    .panel data-equalizer-watch=""
+      i.fa.fa-rounded.fa-money
+      h3.l-title Tarif réduit
+  .medium-4.columns
+    .panel data-equalizer-watch=""
+      i.fa.fa-rounded.fa-calendar
+      h3.l-title Valable un an
+  .medium-4.columns
+    .panel data-equalizer-watch=""
+      i.fa.fa-rounded.fa-info-circle
+      h3.l-title Renseignement à la billetterie du musée
+
+.row
+  .medium-10.medium-centered.columns
+    p La Carte [L] professionnels s'adresse aux :
+    ul
+      li Professionnels des arts des musées et de la culture
+      li Personnels du ministère de la Culture et de la Communication
+      li Personnels de la Région-Nord Pas de Calais, Département du Pas de Calais, Communauté d'Agglomération Lens-Liévin, Ville de Lens
+      li Professionnels du tourisme
+      li Enseignants
+      li Documentalistes
+      li Encadrants de jeunes (bénévoles ou salariés)
+      li Encadrants de publics handicapés (bénévoles ou salariés)
+      li Encadrants du champ social ou médico-social (bénévoles ou salariés)
+      li Étudiants en art de plus de 25 ans
+      li Journalistes
+      li Membres de la Société des amis du Louvre et aux différents cercles des mécènes du musée du Louvre
+      li Personnels administratifs et techniques des établissements scolaires et universitaires
+
+.row
+  .medium-4.medium-centered.columns
+    =link_to '#', class: 'button large expand' do
+      'S'abonner
+      i.fa.fa-plus
