--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -12,7 +12,7 @@ title: Accueil
 
 .row
   .medium-10.medium-centered.columns
-    p Le Louvre-Lens est un établissement public culturel. Ce "deuxième Louvre" est situé à Lens, il s'agit d'un établissement autonome, lié au musée du Louvre parisien par une convention scientifique et culturelle.
+    p.drop-cap Le Louvre-Lens est un établissement public culturel. Ce "deuxième Louvre" est situé à Lens, il s'agit d'un établissement autonome, lié au musée du Louvre parisien par une convention scientifique et culturelle.
 
     p Le musée est construit sur le site de l'ancienne fosse no 9 des mines de Lens. Le nouveau bâtiment accueille des expositions semi-permanentes représentatives de l'ensemble des collections du musée du Louvre, renouvelées régulièrement. Il accueille également des expositions temporaires de niveau national ou international.
 
