--- a/source/views/global/_menu_main.html.slim
+++ b/source/views/global/_menu_main.html.slim
@@ -24,7 +24,7 @@ div class="sticky" data-options="sticky_on: large'"
             li
               a href="#" Administration
             li
-              =link_to 'Agenda', '/agenda'
+              =link_to 'Agenda', '/agenda.html'
         li class="divider"
         li class="has-dropdown"
           a href="#" Expositions
