Update about page for deploy

--- a/source/about.html.slim
+++ b/source/about.html.slim
@@ -4,17 +4,7 @@ page_title: Message à l'attention du directeur du musée du Louvre
 page_subtitle: Expositions en cours et à venir
 ---
 
-h2 AÄ
+.row
+  .medium-10.medium-centered.columns
+    h2 À propos
 
-HENRI LOYRETTE, Président-directeur du musée du Louvre
-DANIEL PERCHERON, Président de la Région Nord-Pas de Calais
-
-Xavier Dectot, Directeur
-Luc Herchin
-Orange Business Service - IT&L@bs
-
-Bonjour messieurs,
-
-J'aimerais bien vous dire que je trouve votre site génial et qu'il respecte les standards d'accessibilité
-
-http://davidl.fr/webdesign.html
