Update gem file

--- a/source/views/global/_menu_main.html.slim
+++ b/source/views/global/_menu_main.html.slim
@@ -75,4 +75,4 @@ div class="sticky" data-options="sticky_on: large'"
               a hre="#" Multimédia
         li class="divider"
         li class="has-form"
-          a class="button" href="/dashboard" Mon Louvre-Lens
+          =link_to 'Mon Louvre-Lens', '/dashboard.html', class: 'button'
