Fix path for links

--- a/source/agenda.html.slim
+++ b/source/agenda.html.slim
@@ -24,5 +24,19 @@ page_subtitle: Expositions en cours et à venir
           'La galerie du temps
           br
           'Un parcours inédit à travers l'histoire du temps
+hr
+.row
+  .medium-12.columns
+    h2 Expositions à venir
+    ul.large-block-grid-3.medium-block-grid-2
+      li
+        = image_tag 'http://www.louvrelens.fr/documents/10181/72164/L%27oubli%C3%A9_292.jpg/19b7d67d-7247-49ae-9c6b-60fc0923c44c?t=1376922473000&type=jpg'
+        p
+          'Du 28 mai au 6 octobre 2014
+          br
+          'Les Désastres de la guerre. 1800-2014
+
+
+
 
 = partial 'views/global/categories'
