--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -44,7 +44,7 @@ title: Accueil
     .panel
       br
     p.text-right
-      =link_to '#' do
+      =link_to '/agenda.html' do
         'Toutes les expos
         i.fa.fa-caret-right
 = partial 'views/global/categories'
