--- a/source/views/global/_menu_main.html.slim
+++ b/source/views/global/_menu_main.html.slim
@@ -3,7 +3,7 @@ div class="sticky" data-options="sticky_on: large'"
     ul class="title-area"
       li class="name"
         h1
-          = link_to 'Le Louvre-Lens', '/'
+          = link_to 'Le Louvre-Lens', '/index.html'
       li class="toggle-topbar menu-icon"
         a href="#" Menu
 
@@ -54,7 +54,7 @@ div class="sticky" data-options="sticky_on: large'"
             li
               a href="#" Actualités des partenariats
             li
-              a href="/agenda" Agenda
+              =link_to 'Agenda', '/agenda.html'
         li class="divider"
         li
           a href="#" Oeuvres
