--- a/source/views/global/footer/_misc.html.slim
+++ b/source/views/global/footer/_misc.html.slim
@@ -3,7 +3,7 @@
     br
     p
       '&copy; Le Louvre-Lens 2014 &bull; Tous les contenus sont "piratés" depuis
-      = link_to 'louvrelens.fr', 'http://louvrelens.fr', target: '_blank', :rel => 'nofollow'
+      = link_to 'louvrelens.fr', 'http://www.louvrelens.fr/', target: '_blank', :rel => 'nofollow'
     hr
     p
 
