Add analytics lib

--- a/source/about.html.slim
+++ b/source/about.html.slim
@@ -1,10 +1,29 @@
 ---
 title: À propos
-page_title: Message à l'attention du directeur du musée du Louvre
-page_subtitle: Expositions en cours et à venir
+page_title: À propos
+page_subtitle:
 ---
 
 .row
   .medium-10.medium-centered.columns
-    h2 À propos
+    h2 Message à l'attention du directeur du musée du Louvre
+
+.row
+  .medium-12.columns
+    p J'aimerais bien vous dire que je trouve votre site génial, qu'il respecte les standards d'accessibilité et qu'il soit moderne... Mais ce n'est pas le cas.
+    p J'ai remarqué que votre site n'est pas compatible avec le nouveau monde du multi-écrans.
+    p
+      'Connaissez vous le site
+      =link_to 'responsivemuseum', 'http://responsivemuseum.com/fr/index.html'
+      ' ?
+    p Le but de ce site est de :
+    ol
+      li Choisir un musée
+      li Hacker sa feuille de style
+      li Partagez le résultat de ce travail
+    p J'ai donc décider de créer ce prototype qui vous inspirera peut être pour la prochaine refonte de votre site.
+    p
+      'Cordialement,
+      br
+      'Leuliette David
 
