--- a/source/views/global/footer/_navigation.html.slim
+++ b/source/views/global/footer/_navigation.html.slim
@@ -6,7 +6,8 @@
       p
         strong Musée
       ul
-        li À propos
+        li
+          =link_to 'À propos', '/about.html'
         li Partenaires
         li Presse
         li Mentions légales
