Update about page

--- a/source/about.html.slim
+++ b/source/about.html.slim
@@ -21,7 +21,10 @@ page_subtitle:
       li Choisir un musée
       li Hacker sa feuille de style
       li Partagez le résultat de ce travail
-    p J'ai donc décider de créer ce prototype qui vous inspirera peut être pour la prochaine refonte de votre site.
+    p
+      'J'ai donc décider de créer ce prototype qui vous inspirera peut être pour la prochaine refonte de votre site. Si vous souhaitez savoir comment cela fonctionne je vous invite à lire cette publication sur le
+      =link_to 'design orienté mobile', 'http://davidl.fr/webdesign.html'
+      '.
     p
       'Cordialement,
       br
