Remove page_nav

--- a/source/about.html.slim
+++ b/source/about.html.slim
@@ -10,11 +10,11 @@ page_subtitle:
 
 .row
   .medium-12.columns
-    p J'aimerais bien vous dire que je trouve votre site génial, qu'il respecte les standards d'accessibilité et qu'il soit moderne... Mais ce n'est pas le cas.
-    p J'ai remarqué que votre site n'est pas compatible avec le nouveau monde du multi-écrans.
+    p J'aimerais vous dire que je trouve votre site génial, qu'il respecte les standards d'accessibilité et qu'il soit moderne... Mais ce n'est pas le cas.
+    p J'ai remarqué qu'il n'est pas compatible avec le nouveau monde du multi-écrans.
     p
       'Connaissez vous le site
-      =link_to 'responsivemuseum', 'http://responsivemuseum.com/fr/index.html'
+      ='link_to 'responsivemuseum', 'http://responsivemuseum.com/fr/index.html'
       ' ?
     p Le but de ce site est de :
     ol
@@ -22,7 +22,7 @@ page_subtitle:
       li Hacker sa feuille de style
       li Partagez le résultat de ce travail
     p
-      'J'ai donc décider de créer ce prototype qui vous inspirera peut être pour la prochaine refonte de votre site. Si vous souhaitez savoir comment cela fonctionne je vous invite à lire cette publication sur le
+      'J'ai décidé de créer ce prototype qui vous inspirera peut être pour la prochaine refonte de votre site. Si vous souhaitez savoir comment cela fonctionne je vous invite à lire cette publication sur le
       =link_to 'design orienté mobile', 'http://davidl.fr/webdesign.html'
       '.
     p
