--- a/source/views/global/footer/_navigation.html.slim
+++ b/source/views/global/footer/_navigation.html.slim
@@ -10,7 +10,8 @@
           =link_to 'À propos', '/about.html'
         li Partenaires
         li Presse
-        li Mentions légales
+        li
+          =link_to 'Mentions légales', '/legal.html'
         li
           =link_to 'Contact', '/contact.html'
     .medium-3.columns
