--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -15,7 +15,7 @@ html xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml" 
     = partial 'views/analytics_code'
   body class='#{page_classes}'
     #js-top
-    = partial 'views/global/page_nav'
+    / = partial 'views/global/page_nav'
     = partial 'views/global/menu_main'
     - if current_page.data['page_title'].present?
       = partial 'views/global/page_title'
