--- a/source/legal.html.slim
+++ b/source/legal.html.slim
@@ -8,7 +8,7 @@ priority: 0
 .row
   .medium-12.columns
     h2 Propriété du site
-    p Vous êtes actuellement connecté au site web http://flexbox.github.io/louvrelens/. Le nindô du propriétaire est le mouvement open source, le code du site appartiennent donc à tout le monde et à personne.
+    p Vous êtes actuellement connecté au site web http://flexbox.github.io/louvrelens/. Le nindô du propriétaire est le mouvement open source, le code du site appartient donc à tout le monde et à personne.
 
     h2 Licence
     p
