--- a/source/views/global/_menu_main.html.slim
+++ b/source/views/global/_menu_main.html.slim
@@ -44,13 +44,11 @@ div class="sticky" data-options="sticky_on: large'"
           a href="#" Actualités
           ul class="dropdown"
             li
-              a href="#" À la une du Louvre-Lens
-            li
-              a href="#" Toutes les actualités du musée
+              a href="#" Actualités du musée
             li
               a href="#" Programmation de la scène
             li
-              a href="#" Au centre de ressources
+              a href="#" Centre de ressources
             li
               a href="#" Actualités des partenariats
             li
